--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7"
+  },
+  "engines": {
+    "node": "15.0.1",
+    "npm": "6.14.8"
   }
 }
